@@ -1,27 +1,41 @@
-ext {
-    shadowJarEnabled = true
+plugins {
+    id "io.micronaut.build.internal.convention-core-library"
 }
+
+micronautBuild {
+    core {
+        documented = false
+        usesMicronautTestJunit()
+    }
+
+}
+
 dependencies {
-    api dependencyVersion("javax.annotation-api")
-    api group: 'javax.inject', name: 'javax.inject', version: '1'
-    compileOnly "jakarta.inject:jakarta.inject-api:2.0.0"
+    api libs.managed.javax.annotation.api
+    compileOnly libs.javax.inject
+    api libs.jakarta.inject.api
+    api libs.managed.jakarta.annotation.api
     api project(':core')
-    api dependencyVersion("snakeyaml")
+    api libs.managed.snakeyaml
 
-    compileOnly "javax.persistence:javax.persistence-api:2.2"
-    compileOnly dependencyModuleVersion("groovy", "groovy")
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
-    compileOnly dependencyVersion("validation")
+    compileOnly libs.javax.persistence
+    compileOnly libs.managed.groovy
+    compileOnly libs.kotlin.stdlib.jdk8
+    compileOnly libs.managed.validation
 
-    testImplementation dependencyVersion("validation")
+//    testImplementation libs.managed.validation
+    testImplementation project(":context")
     testImplementation project(":inject-groovy")
     testImplementation project(":inject-test-utils")
-    testImplementation "com.github.stefanbirkner:system-lambda:1.2.0"
+    testImplementation libs.systemlambda
 
-    testImplementation dependencyModuleVersion("micronaut.test", "micronaut-test-junit5"), {
-        exclude module:'micronaut-runtime'
-        exclude module:'micronaut-inject'
+    testRuntimeOnly libs.junit.jupiter.engine
+
+}
+
+tasks.withType(Test) {
+    if(JavaVersion.current().majorVersion.toInteger() >= 17) {
+        logger.warn("Opening java.util, so SystemLambda can work")
+        jvmArgs += ['--add-opens', 'java.base/java.util=ALL-UNNAMED']
     }
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
-
 }
